# SurfaceCutter

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  ExampleSurfaceCutter.cpp  LICENSE  README.md  SurfaceCutter.cxx  SurfaceCutter.h  SurfaceCutterBenchmark.cpp  SurfaceCutterHelper.h  SurfaceCutterImpl.h  SurfaceCutterTest.cpp  TestSurfaceCutter.cpp  tscBench.cpp
Testing/Data/: Case1.vtp  Case6.vtp  InOutFalse.vtm
Testing/Data/InOutFalse/: InOutFalse_0.vtp  InOutFalse_1.vtp  InOutFalse_2.vtp  InOutFalse_3.vtp  InOutFalse_4.vtp  InOutFalse_5.vtp
Testing/Data/InOutTrue/: InOutTrue_0.vtp  InOutTrue_1.vtp  InOutTrue_2.vtp  InOutTrue_3.vtp  InOutTrue_4.vtp  InOutTrue_5.vtp
data/: BigSurface.vtp.REMOVED.git-id  Case4.vtp  InOutTrue.vtm  Surface.vtp  Surface.vtu  TestCase1InOutFalse.vtp  TestCase1InOutTrue.vtp  TestCase2InOutFalse.vtp  TestCase2InOutTrue.vtp  TestCase3InOutFalse.vtp  TestCase3InOutTrue.vtp  TestCase4InOutFalse.vtp  TestCase4InOutTrue.vtp  TestCase5InOutFalse.vtp  TestCase5InOutTrue.vtp  TestPolys1.vtp  TestPolys2.vtp  Triangle.vtp
data/InOutFalse/: InOutFalse_0.vtp  InOutFalse_1.vtp  InOutFalse_2.vtp  InOutFalse_3.vtp  InOutFalse_4.vtp  InOutFalse_5.vtp
data/InOutTrue/: InOutTrue_0.vtp  InOutTrue_1.vtp  InOutTrue_2.vtp  InOutTrue_3.vtp  InOutTrue_4.vtp  InOutTrue_5.vtp
diagnostics/: Report20201025-0903.diagsession.REMOVED.git-id  Report20201025-0909.diagsession.REMOVED.git-id
illustrations/: benchmarks.html  benchmarks.xlsx
paraview/: CMakeLists.txt  TriSurfaceCutter.xml  tsc.plugin
perf-diagnostics/: Report20201106-1526.diagsession.REMOVED.git-id
testing/: Case2.vtp  Case3.vtp  Case5.vtp
tscTriSurfaceCutter/: CMakeLists.txt  tscTriSurfaceCutter.cxx  tscTriSurfaceCutter.h  vtk.module
tscTriSurfaceCutter/Testing/: TesttscTriSurfaceCutter.cxx
